fix: top of homepage being cut off

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@
 }
 
 .App-header {
-  height: 100%;
   overflow-x: hidden;
   background-color: #f7eaea;
   min-height: 100vh;
